# car_detect_number

./: Makefile  docker-compose.yml
telegram_bot/: .env.example  Makefile  pyproject.toml
telegram_bot/migration/: env.py
telegram_bot/migration/versions/: 170ce70497bc_.py  f5c75763fb08_.py
telegram_bot/src/: __init__.py  main.py
telegram_bot/src/core/: __init__.py  containers.py  settings.py  sqlalchemy_core.py
telegram_bot/src/core/language/: __init__.py  en.py  lang.py  ru.py
telegram_bot/src/handler/: __init__.py
telegram_bot/src/handler/v1/: address_handler.py  start_handler.py
telegram_bot/src/handler/v1/filters/: __init__.py  address_filters.py
telegram_bot/src/handler/v1/middlewares/: __init__.py  helpers.py
telegram_bot/src/infrastructure/repository/: adapter.py  postgres_repository.py
telegram_bot/src/infrastructure/repository/postgres_models/: __init__.py  abstract_model.py  address_models.py  association_models.py  camera_config_models.py  car_number_models.py
telegram_bot/src/services/entities/: __init__.py  address.py  camera_config.py  car_number.py
telegram_bot/src/services/helpers/: __init__.py
telegram_bot/src/services/interface/: __init__.py  repository.py
telegram_bot/src/services/use_case/: __init__.py  address_use_case.py
