[tool.poetry]
name = "telegram-bot"
version = "0.1"
description = "Настройка конфига через телеграм, по которому будем определять для какого номера будем открывать дверь"
authors = ["NicholasNartikoev <nartikoevnikolai@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.6.0"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
sqlalchemy = {extras = ["full"], version = "^2.0.30"}
sqlalchemy-utils = "^0.41.2"
dependency-injector = "^4.41.0"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
